First Specific Vehicle Info Done - starting to fix user bug

--- a/app/src/main/res/layout/activity_specific_vehicle_info.xml
+++ b/app/src/main/res/layout/activity_specific_vehicle_info.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".specific_vehicle_info">
 
-    <TextView
-        android:id="@+id/vehicleInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.327" />
-
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
@@ -28,4 +16,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayoutSpecificInfo"
+        android:layout_width="409dp"
+        android:layout_height="345dp"
+        android:layout_marginTop="88dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
