Filtering Added - Comments Missing

--- a/app/src/main/res/layout/activity_vehicles_recycler.xml
+++ b/app/src/main/res/layout/activity_vehicles_recycler.xml
@@ -8,11 +8,18 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recView"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="369dp"
+        android:layout_height="675dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="14dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
